--- a/LoginExample.Api/appsettings.json
+++ b/LoginExample.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AuthContext": {
-    "ConnectionString": ""
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=auth.db"
   }
 }
