--- a/LoginExample.Api/appsettings.json
+++ b/LoginExample.Api/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=auth.db"
+  },
+  "EmailSettings": {
+    "DefaultFromEmail": "pawel@frankowski.com",
+    "Host": "localhost",
+    "Port": "25",
+    "Username": "",
+    "Password": ""
   }
 }
