--- a/src/BasicAuthApp.Infrastructure/BasicAuthApp.Infrastructure.csproj
+++ b/src/BasicAuthApp.Infrastructure/BasicAuthApp.Infrastructure.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <BaseOutputPath>..\LoginExample.Api\bin\</BaseOutputPath>
+        <BaseOutputPath>..\BasicAuthApp.Api\bin\</BaseOutputPath>
     </PropertyGroup>
 
     <ItemGroup>
